fix positioning and set highest z-index

--- a/src/content/content.scss
+++ b/src/content/content.scss
@@ -22,6 +22,7 @@
     border: 1px solid rgb(255, 255, 255);
     opacity: 0.4;
     transition: all 100ms ease-in-out;
+    z-index: 2147483647; // max int
 
     .underlay {
       width: 0;
@@ -31,15 +32,15 @@
       left: 50%;
       transform: translateX(-50%) translateY(-50%);
       z-index: -1;
-      background-color: rgb(128, 128, 128, 0.2)
+      background-color: rgb(128, 128, 128, 0.05)
     }
 
     &:hover {
-      opacity: 1;
+      opacity: 0.8;
 
       .underlay {
         width: 16rem;
-        height: 8rem;
+        height: 6rem;
       }
     }
   }
